newsletter change font size

--- a/assets/sass/components/_main.scss
+++ b/assets/sass/components/_main.scss
@@ -72,6 +72,9 @@
                 background-color: purple;
                 padding: 10px;
                 color: white;
+                span{
+                    font-size: 14px;
+                }
             }
             form {
                 background-color: #f3f1f1;
