--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -521,13 +521,16 @@ li {
   .left-wrapper .logo img {
     width: 250px !important;
   }
-  .siderbar {
-    order: 2;
-    padding-top: 30px;
-  }
   .nav-pills .nav-link {
     display: flex;
     font-size: 12px !important;
+  }
+}
+
+@media (max-width: 992px) {
+  .siderbar {
+    order: 2;
+    padding-top: 30px;
   }
 }
 
