--- a/assets/sass/components/_main.scss
+++ b/assets/sass/components/_main.scss
@@ -341,13 +341,17 @@
         }
     }
 
+    .nav-pills .nav-link{
+        display: flex;
+        font-size: 12px !important;
+    }
+ }
+
+ @media (max-width: 992px) { 
+
     .siderbar{
         order: 2;
         padding-top: 30px;
     }
 
-    .nav-pills .nav-link{
-        display: flex;
-        font-size: 12px !important;
-    }
  }
